--- a/src/styles/update.css
+++ b/src/styles/update.css
@@ -1,30 +1,28 @@
 .header {
-    overflow: hidden;
     background-color: black;
-    height: 100px;
     color: white;
     padding: 33px; 
   }
 
 .footer {
-
-    overflow: hidden;
     background-color: black;
     height: 50px;
     color: white;
-    padding: 33px; 
+    padding: 50px; 
 }
+
 
 .content{
     background-color: rgb(255, 255, 255);
-    height: 86vh;
+    width:100%;
+    height:100vmin;
+
     color: rgb(0, 0, 0);
     display: flex;
 }
 
 .content.center{
     background-color: white;
-    flex: auto;
 }
 
 .documentText {
