--- a/src/styles/update.css
+++ b/src/styles/update.css
@@ -2,9 +2,10 @@ body {
     padding: 0;
     margin: 0;
   }
-  .header {
+.header {
     padding: 20px; 
-  }
+    margin: 0;  
+}
 
 .footer {
     background-color: black;
